# tree-sitter-hew

./: .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-hew.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hew/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHew/: hew.h
bindings/swift/TreeSitterHewTests/: TreeSitterHewTests.swift
linguist/: README.md  languages.yml.patch
linguist/samples/: actor_fibonacci.hew  concurrent_counter.hew  four_pillars.hew
queries/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt  declarations.txt
tools/: check-drift.sh
